<resources>
    <string name="app_name">PPI</string>
    <string name="login">Login:</string>
    <string name="senha">Senha:</string>
    <string name="acessar">Acessar</string>
    <string name="bemVindo">SEJA BEM VINDO AO NOSSO CURSO</string>
    <string name="inscricao">Realizar Inscrição</string>
    <string name="cadProf">Cadastrar Professor</string>
    <string name="cadCurso">Cadastrar Curso</string>
    <string name="profAlu">Alocar Professor e Aluno</string>
    <string name="notaFalta">Lançar Nota e Falta</string>
    <string name="nome">Nome:</string>
    <string name="enredeco">Endereco:</string>
    <string name="telefone">Telefone</string>
    <string name="cidade">Cidade:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="mostrar">Mostrar</string>
    <string name="deletar">Deletar</string>
    <string name="curso">Curso:</string>
    <string name="formacao">Formação:</string>
    <string name="codigo">Código:</string>
    <string name="descricao">Descrição:</string>
    <string name="turma">Turma:</string>
    <string name="sala">Sala:</string>
    <string name="dataIni">Data Ini:</string>
    <string name="dataTer">Data Ter:</string>
    <string name="turno">Turno:</string>
    <string name="status">Status:</string>
    <string name="ativo">Ativo</string>
    <string name="inativo">Inativo</string>
    <string name="conclui">Concluiu</string>
    <string name="nota">Nota:</string>
    <string name="frequencia">Frequência:</string>
    <string name="lancar">Lançar</string>
    <string name="logar">Vamos Logar</string>
    <string name="idInscricao">ID Inscrição:</string>
    <string name="idProfessor">ID Professor:</string>
    <string name="idLancar">ID:</string>
    <string name="idCurso">ID Curso:</string>
    <string name="idAlocar">ID:</string>
    <string name="professor">Professor:</string>
    <string name="URL">http://ppi2016.herokuapp.com/</string>
</resources>
